[package]
license = "MIT"
name = "bevy_cached_query"
version = "0.2.2"
edition = "2021"
authors = ["Angelo <angelomateus89@gmail.com>"]
repository = "https://github.com/AngeloMateus/bevy_query_tasks"
publish = true
description = "Simple high level query library for Bevy based on async tasks and Observer API very loosely inspired by TanStack Query."

[dependencies]
bevy = { version = "0.15.1", default-features = false, features = [
    "bevy_core_pipeline",
    "serialize",
    "multi_threaded",
] }
ureq = { version = "2.11.0", features = ["json"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
derive_builder = "0.20.2"
color-print = "0.3.5"
anyhow = "1.0.94"
hyper = "1.5.1"

[dev-dependencies]
ntest = "0.9.3"
tiny_http = "0.12.0"

[workspace]
members = ["testserver"]
